Claim Screen Changes..

--- a/resources/registration/view/registration.html
+++ b/resources/registration/view/registration.html
@@ -51,26 +51,26 @@
 
                                     <tr>
                                         <th ng-click="sortBy('referenceNumber')">Reference Number
-                                            <span class="glyphicon" ng-show="propertyName == 'referenceNumber'" ng-class="{'glyphicon-hand-down': reverse, 'glyphicon-hand-up' : !reverse}"></span>
+                                            <span class="fa" ng-show="propertyName == 'referenceNumber'" ng-class="{'fa-hand-o-down': reverse, 'fa-hand-o-up' : !reverse}"></span> 
                                         </th>
                                         
                                         <th ng-click="sortBy('memberNumber')">Member Number
-                                            <span class="glyphicon" ng-show="propertyName == 'memberNumber'"ng-class="{'glyphicon-hand-down': reverse, 'glyphicon-hand-up' : !reverse}"></span>
+                                            <span class="fa" ng-show="propertyName == 'memberNumber'"ng-class="{'fa-hand-o-down': reverse, 'fa-hand-o-up' : !reverse}"></span>
                                         </th>
                                         <th ng-click="sortBy('memberName')">Member Name
-                                            <span class="glyphicon" ng-show="propertyName == 'memberName'"ng-class="{'glyphicon-hand-down': reverse, 'glyphicon-hand-up' : !reverse}"></span>
+                                            <span class="fa" ng-show="propertyName == 'memberName'"ng-class="{'fa-hand-o-down': reverse, 'fa-hand-o-up' : !reverse}"></span>
                                         </th>
                                         <th ng-click="sortBy('mobileNumber')">Mobile Number
-                                            <span class="glyphicon" ng-show="propertyName == 'mobileNumber'"ng-class="{'glyphicon-hand-down': reverse, 'glyphicon-hand-up' : !reverse}"></span>
+                                            <span class="fa" ng-show="propertyName == 'mobileNumber'"ng-class="{'fa-hand-o-down': reverse, 'fa-hand-o-up' : !reverse}"></span>
                                         </th>
                                         <th ng-click="sortBy('alternateEmail')">Alternate Email
-                                            <span class="glyphicon"ng-show="propertyName == 'alternateEmail'"ng-class="{'glyphicon-hand-down': reverse, 'glyphicon-hand-up' : !reverse}"></span>
+                                            <span class="fa"ng-show="propertyName == 'alternateEmail'"ng-class="{'fa-hand-o-down': reverse, 'fa-hand-o-up' : !reverse}"></span>
                                         </th>
                                         <th ng-click="sortBy('paymentType')">Payment Type
-                                            <span class="glyphicon" ng-show="propertyName == 'paymentType'"ng-class="{'glyphicon-hand-down': reverse, 'glyphicon-hand-up' : !reverse}"></span>
+                                            <span class="fa" ng-show="propertyName == 'paymentType'"ng-class="{'fa-hand-o-down': reverse, 'fa-hand-o-up' : !reverse}"></span>
                                         </th>
                                         <th ng-click="sortBy('iBANNumber')">IBAN Number
-                                            <span class="glyphicon" ng-show="propertyName == 'iBANNumber'"ng-class="{'glyphicon-hand-down': reverse, 'glyphicon-hand-up' : !reverse}"></span>
+                                            <span class="fa" ng-show="propertyName == 'iBANNumber'"ng-class="{'fa-hand-o-down': reverse, 'fa-hand-o-up' : !reverse}"></span>
                                         </th>
                                         <th>IBAN Document</th>
                                     </tr>
