--- a/resources/eclaim/view/eclaim.html
+++ b/resources/eclaim/view/eclaim.html
@@ -151,27 +151,27 @@
                 <ul class="infoList clearfix">
                     <li>
                         <span>Claim Number</span>
-                        <strong>80010201</strong>
+                        <strong>{{claim.claimNum}}</strong>
                     </li>
                     <li>
                         <span>Request Number</span>
-                        <strong>10010201-1</strong>
+                        <strong>{{claim.reqNum}}</strong>
                     </li>
                     <li>
                         <span>Status</span>
-                        <strong class="text-success">Approved</strong>
+                        <strong ng-class="{'text-success' : claim.status == 'Approved', 'text-danger' : claim.status == 'Rejected'}">{{claim.status}}</strong>
                     </li>
                     <li>
                         <span>Policy Number</span>
-                        <strong>80010201</strong>
+                        <strong>{{claim.policyNum}}</strong>
                     </li>
                     <li>
                         <span>Voucher Number</span>
-                        <strong>80010201</strong>
+                        <strong>{{claim.voucherNum}}</strong>
                     </li>
                     <li>
                         <span>Member Number</span>
-                        <strong>10010201-1</strong>
+                        <strong>{{claim.memberNum}}</strong>
                     </li>
                 </ul>
                 <div class="requestListWrap clearfix">
@@ -179,9 +179,9 @@
                         <div class="requstList">
                             <ui-carousel slides="claimReqList" class="eclaim" style="width:{{getWidth()}};" slides-to-show="noOfSlides" slides-to-scroll="1" initial-slide="0" infinite="false">
                                 <carousel-item  class="eclaim-item">
-                                    <li>
-                                        <p><b>Claim Number:</b> #{{item.claimNum}}</p>
-                                        <span><b>Request Number:</b> #{{item.reqNum}}</span><strong class="text-danger ml-2">Rejected</strong>
+                                    <li ng-click="toggleJson(item);" style="cursor:pointer">
+                                        <p><b>Claim Number:</b> <a class="currencyTypeCustom" href="javascript:void(0);" ng-click="toggleJson(item);">#{{item.claimNum}}</a></p>
+                                        <span><b>Request Number:</b> #{{item.reqNum}} &nbsp;</span><strong ng-class="{'text-success' : item.status == 'Approved', 'text-danger' : item.status == 'Rejected'}">{{item.status}}</strong>
                                         <p><b>Claim Status Reason:</b> {{item.statusReason}}</p>
                                         <p><b>Rejected Reason:</b> {{item.rejectedReason}}</p>
                                     </li>
@@ -198,7 +198,7 @@
                 </div>
                 <div class="eclaimRequest text-center mt-4">
                     <div class="clearfix">
-                        <a href="javascript:;" class="custCheckboxBtn float-left" style="margin: 15px 9px 0px 6px !important;">
+                        <a href="javascript:;" class="custCheckboxBtn float-left" ng-class="{'custCheckboxBtnSected' : isChecked}" ng-click="toggleSelect();" style="margin: 15px 9px 0px 6px !important;">
                             <span class="oi" data-glyph="check"></span>
                         </a>
                         <div class="btn-group btn-group-sm claimStatusBtns mt-2 mb-2 float-left" role="group" aria-label="Basic example">
@@ -232,8 +232,8 @@
         </div>
         
         <footer class="clearfix">
-            <button type="button" class="btn btn-primary btn-sm float-right ml-3 mt-3">Submit for Approval</button>
-            <button type="button" class="btn btn-outline-primary btn-sm float-right ml-3  mt-3">Reject</button>
+            <button type="button" class="btn btn-outline-primary btn-sm float-right ml-3 mt-3" ng-click="approveClaim()">Submit for Approval</button>
+            <button type="button" class="btn btn-outline-primary btn-sm float-right ml-3  mt-3" ng-click="rejectClaim()">Reject</button>
             <ul class="float-right clearfix mt-1">
                 <li class="float-left">
                     <span>Total deduction</span>
