--- a/resources/registration/view/registration.html
+++ b/resources/registration/view/registration.html
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                     <div class="col-5 p-0">
-                        <a href="javascript:;" class="btn btn-primary createNewBtn float-left mt-3 ml-4" ui-sref="claim-registration-general" style="float:right; pading-left:5px;">Create new</a>
+                        <a href="javascript:;" class="btn btn-primary createNewBtn float-left mt-3 ml-4" ui-sref="claim-registration-general" style="float:right; pading-left:5px;">Register New Claim</a>
                     </div>
                 </div>
             </div>
