--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -170,7 +170,7 @@
                         <div class="claimRequestDetInner mb-3 clearfix" style="margin-top:3%;padding-left:0px;">
                             <!-- <div class="row mb-2 clearfix"> -->
                                 <div layout-gt-sm="row" class="pb-1">
-                                    <div class="masterCodes col-sm-2 float-left" style="border: 1px solid #b3b3b3;margin: 0 3px 0 19px;">
+                                    <div class="masterCodes col-sm-2.5 float-left" style="border: 1px solid #b3b3b3;margin: 0 3px 0 19px;">
                                         <md-autocomplete
                                             md-selected-item="claim.treatmentCodeOrSubBenefit"
                                             md-search-text="searchText"
@@ -187,7 +187,7 @@
                                             </md-not-found>
                                         </md-autocomplete>
                                     </div>
-                                    <div class="col-sm-2 float-left" style="border: 1px solid #b3b3b3;margin: 0 3px;">
+                                    <div class="col-sm-1.5 float-left" style="border: 1px solid #b3b3b3;margin: 0 3px;">
                                         <md-input-container flex-gt-sm style="margin-top: 18px;">    
                                             <label>Service From</label>
                                             <md-datepicker ng-model="claim.serviceFrom" md-hide-icons="all" md-open-on-focus></md-datepicker>
@@ -217,7 +217,7 @@
                                             <input type="number" ng-model="claim.manualDeduction">
                                         </md-input-container>
                                     </div>
-                                    <div class="masterCodes col-sm-1.5 float-left" style="border: 1px solid #b3b3b3;margin: 0 3px;">
+                                    <div class="masterCodes col-sm-2 float-left" style="border: 1px solid #b3b3b3;margin: 0 3px;">
                                         <md-autocomplete
                                             md-selected-item="claim.rejectionCode"
                                             md-search-text="rejectionText"
@@ -240,40 +240,41 @@
                                     <div class="col-sm-2 float-left">
                                         <md-input-container flex-gt-sm style="margin-top: 18px;">   
                                             <label>Policy Ded Amount</label>
-                                            <input type="text" ng-model="claim.policyDedAmount">
+                                            <input type="number" ng-model="claim.policyDedAmount">
                                         </md-input-container>
                                     </div>
                                     <div class="col-sm-2 float-left">
                                         <md-input-container flex-gt-sm style="margin-top: 18px;">
                                             <label>Penalty Amount</label>
-                                            <input type="text" ng-model="claim.penaltyAmount">
+                                            <input type="number" ng-model="claim.penaltyAmount">
                                         </md-input-container>
                                     </div>
                                     <div class="col-sm-2 float-left">
                                         <md-input-container flex-gt-sm style="margin-top: 18px;">
                                             <label>Suggessted Amt</label>
-                                            <input type="text" ng-model="claim.suggesstedAmount">
+                                            <input type="number" ng-model="claim.suggesstedAmount">
                                         </md-input-container>
                                     </div>
                                     <div class="col-sm-2 float-left">
                                         <md-input-container flex-gt-sm style="margin-top: 18px;">
                                             <label>Approved Amount</label>
-                                            <input type="text" ng-model="claim.approvedAmount">
+                                            <input type="number" ng-model="claim.approvedAmount">
                                         </md-input-container>
                                     </div>
                                     <div class="col-sm-2 float-left">
                                         <md-input-container flex-gt-sm style="margin-top: 18px;">
                                             <label>Rejected Amount</label>
-                                            <input type="text" ng-model="claim.rejectedAmount">
+                                            <input type="number" ng-model="claim.rejectedAmount">
                                         </md-input-container>
                                     </div>
                                     <div class="col-sm-2 float-left" style="width: auto !important;">
                                         <md-input-container flex-gt-sm style="margin-top: 18px;">
                                             <label>Status</label>
-                                            <md-select name="Statue" ng-model="claim.status">
+                                            <!-- <md-select name="Statue" ng-model="claim.status">
                                                 <md-option value="Approved">Approved</md-option>
                                                 <md-option value="Rejected">Rejected</md-option>
-                                            </md-select>
+                                            </md-select> -->
+                                            <input type="text" ng-model="claim.status" maxlength="18">
                                         </md-input-container>
                                     </div>
                                     <!-- <div class="col-sm-6 float-right">
@@ -323,7 +324,7 @@
                             </button>                            
                         </div>
                         <h3 class="innerHeadText mt-2 mb-2 d-inline-block">Claim Treatment/Service Level</h3><div class="currencyType d-inline-block">Currency: AED</div>
-                        <a href="javascript:;" class="tablColmArrow float-right mt-2 mb-2 mr-3 ml-2" ng-click="createNew=true;">
+                        <a href="javascript:;" class="tablColmArrow float-right mt-2 mb-2 mr-3 ml-2" ng-click="createNewClaim();">
                             <span class="oi" data-glyph="plus"></span>
                         </a>
                         <a href="javascript:;" class="tablColmArrow float-right mt-2 mb-2 mr-3 ml-2" id="right-button">
